# ndio-hdf5

./: CMakeLists.txt  config.h.in
cmake/: HDF5Config.cmake  SZIPConfig.cmake  ZLIBConfig.cmake
src/: macros.h  ndio-hdf5.c  ndio-hdf5.h
test/: io.cc
test/data/: test.h5  test.mat
